--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,4 @@
 .App {
-  text-align: center;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
+  display: flex;
+  flex-direction: column;
 }
